# gtk3-throwback

./: CMakeLists.txt  README.md
src/: button_tweaks.c  button_tweaks.h  main.c  menu_item_tweaks.c  menu_item_tweaks.h  message_dialog_tweaks.c  message_dialog_tweaks.h  statusbar_tweaks.c  statusbar_tweaks.h  toolbar_tweaks.c  toolbar_tweaks.h  window_tweaks.c  window_tweaks.h
